Save window position/size when the window is closed.
This uses the somewhat arcane but very powerful WindowListener that's part of an LWJGL3 window; it's all declared in the LWJGL3 launcher. FileManager also had some issues that made it unable to write to a non-existent folder, and was Java-8-incompatible.